<resources>
    <string name="app_name">Fitmoji</string>
    <string name="textWelcome">Welcome to Fitmoji!</string>
    <string name="textWelcomeDesc">We just have a few questions for you before we get started</string>
    <string name="textReturningUser">Click ok to continue to your Fitmoji account</string>
    <string name="textOk">Ok</string>

    <string name="textContinue">Continue</string>
    <string name="textNameQuestion">What is your name?</string>
    <string name="nameHint">Name</string>
    <string name="ageHint">Age</string>
    <string name="textAgeQuestion">How old are you?</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>

    <string name="textReasonQuestion">Why are you using Fitmoji?</string>
    <string name="textWeightLoss">To lose weight</string>
    <string name="textWeightGain">To gain weight</string>
    <string name="textStayInShape">To stay in shape</string>
    <string name="textWeight">How much do you weigh in pounds?</string>
    <string name="weightHint">Weight</string>
    <string name="heightHint">Height</string>
    <string name="height">What is your height in inches?</string>


    <string name="textActivityLevel">Select Your Activity Level</string>
    <string name="textActivityLight">Light</string>
    <string name="textActivityModerate">Moderate</string>
    <string name="textActivityActive">Active</string>
    <string name="textActivityVeryActive">Very Active</string>

    <string name="textPushupPrevious">Yesterday\'s Push Ups: </string>
    <string name="textPushupGoal">Today\'s Push Up Goal: </string>
    <string name="textPushupToday">Today\'s Push Ups: </string>
    <string name="textCrunchPrevious">Yesterday\'s Crunches: </string>
    <string name="textCrunchGoal">Today\'s Crunch Goal: </string>
    <string name="textCrunchToday">Today\'s Crunches: </string>
    <string name="textPlankPrevious">Yesterday\'s Plank Time: </string>
    <string name="textPlankGoal">Today\'s Plank Time Goal: </string>
    <string name="textPlankToday">Today\'s Plank Time: </string>

    <string name="textProteinYesterday">Yesterday\'s Protein: </string>
    <string name="textProteinGoal">Today\'s Protein Goal: </string>
    <string name="textProteinToday">Today\'s Protein: </string>
    <string name="textCarbs">Yesterday\'s Carbs: </string>
    <string name="textCarbsGoal">Today\'s Carb Goal: </string>
    <string name="textCarbsToday">Today\'s Carbs: </string>
    <string name="textFatsPrevious">Yesterday\'s Fats: </string>
    <string name="textFatsGoal">Today\'s Fat Goal: </string>
    <string name="textFatsToday">Today\'s Fats: </string>
</resources>
