<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">


    <TextView
        android:id="@+id/reasonTextLabel"
        android:layout_width="230dp"
        android:layout_height="27dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/textActivityLevel"

        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="175dp"
        android:layout_height="215dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="276dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButtonLight"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/textActivityLight" />

        <RadioButton
            android:id="@+id/radioButtonModerate"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/textActivityModerate" />

        <RadioButton
            android:id="@+id/radioButtonActive"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/textActivityActive" />

        <RadioButton
            android:id="@+id/radioButtonVeryActive"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/textActivityVeryActive" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>