<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <!--Name TextView and EditText-->
    <TextView
        android:id="@+id/questionName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:gravity="center"
        android:text="@string/textNameQuestion"
        android:textSize="18sp"
        android:textColor="@color/textColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameLayout"
        android:layout_marginTop="12dp"
        android:hint="@string/nameHint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        android:inputType="textPersonName"


        app:layout_constraintTop_toBottomOf="@+id/questionName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="26"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Age TextView and EditText-->
    <TextView
        android:id="@+id/ageId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"

        android:gravity="center"
        android:text="@string/textAgeQuestion"
        android:textSize="18sp"
        android:textColor="@color/textColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/nameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/ageLayout"
        android:layout_marginTop="12dp"
        android:hint="@string/ageHint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"




        app:layout_constraintTop_toBottomOf="@+id/ageId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!--Gender RadioGroup-->
    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ageLayout"

        >

        <RadioButton
            android:id="@+id/maleButton1"
            android:layout_width="91dp"
            android:layout_height="19dp"
            android:text="@string/genderMale" />

        <RadioButton
            android:id="@+id/femaleButton2"
            android:layout_width="91dp"
            android:layout_height="19dp"
            android:text="@string/genderFemale" />
    </RadioGroup>

    <!--Buttons-->
    <Button
        android:id="@+id/buttonContinue"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/textContinue"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/genderGroup" />





</androidx.constraintlayout.widget.ConstraintLayout>

