<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/weightGraph"
                android:layout_width="410dip"
                android:layout_height="200dip" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/PushupsGraph"
                android:layout_width="410dip"
                android:layout_height="200dip"
                android:layout_weight="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/cruchesGraph"
                android:layout_width="410dip"
                android:layout_height="200dip"
                android:layout_weight="1" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/PlankTimeGraph"
                android:layout_width="410dip"
                android:layout_height="200dip"
                android:layout_weight="1" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        tools:layout_editor_absoluteX="-36dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="410dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pushupPreviousText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/textPushupPrevious"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="37dp" />

                <TextView
                    android:id="@+id/pushupPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="24dp"
                    android:text="0"
                    app:layout_constraintStart_toEndOf="@+id/pushupPreviousText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pushupGoalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textPushupGoal"
                    app:layout_constraintTop_toBottomOf="@+id/pushupPreviousText"
                    tools:layout_editor_absoluteX="36dp" />

                <TextView
                    android:id="@+id/pushupPrevious2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    app:layout_constraintStart_toEndOf="@+id/pushupPreviousText"
                    app:layout_constraintTop_toBottomOf="@+id/pushupPrevious" />

                <TextView
                    android:id="@+id/pushupGoalText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textPushupToday"
                    app:layout_constraintTop_toBottomOf="@+id/pushupGoalText"
                    tools:layout_editor_absoluteX="35dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPushups"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:maxLength="26"
                    android:singleLine="true"
                    app:layout_constraintStart_toEndOf="@+id/pushupGoalText2"
                    tools:layout_editor_absoluteY="70dp" />

                <TextView
                    android:id="@+id/crunchesPreviousText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/textCrunchPrevious"
                    app:layout_constraintTop_toBottomOf="@+id/textInputPushups"
                    tools:layout_editor_absoluteX="36dp" />

                <TextView
                    android:id="@+id/crunchesPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="32dp"
                    android:text="0"
                    app:layout_constraintStart_toEndOf="@+id/pushupPreviousText"
                    app:layout_constraintTop_toBottomOf="@+id/textInputPushups" />

                <TextView
                    android:id="@+id/crunchesGoalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textCrunchGoal"
                    app:layout_constraintTop_toBottomOf="@+id/crunchesPreviousText"
                    tools:layout_editor_absoluteX="36dp" />

                <TextView
                    android:id="@+id/crunchesGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    app:layout_constraintStart_toEndOf="@+id/pushupPreviousText"
                    app:layout_constraintTop_toBottomOf="@+id/crunchesPrevious" />

                <TextView
                    android:id="@+id/crunchesTodayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textCrunchToday"
                    app:layout_constraintTop_toBottomOf="@+id/crunchesGoalText"
                    tools:layout_editor_absoluteX="35dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputCrunches"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:maxLength="26"
                    android:singleLine="true"
                    app:layout_constraintStart_toEndOf="@+id/pushupGoalText2"
                    tools:layout_editor_absoluteY="184dp" />

                <TextView
                    android:id="@+id/plankPreviousText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/textCrunchPrevious"
                    app:layout_constraintTop_toBottomOf="@+id/textInputCrunches"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/plankPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:text="0 seconds"
                    app:layout_constraintStart_toEndOf="@+id/pushupPreviousText"
                    app:layout_constraintTop_toBottomOf="@+id/textInputCrunches" />

                <TextView
                    android:id="@+id/plankGoalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textCrunchGoal"
                    app:layout_constraintTop_toBottomOf="@+id/plankPreviousText"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/plankGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="0 seconds"
                    app:layout_constraintStart_toEndOf="@+id/pushupPreviousText"
                    app:layout_constraintTop_toBottomOf="@+id/plankPrevious" />

                <TextView
                    android:id="@+id/plnakTodayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/textCrunchToday"
                    app:layout_constraintTop_toBottomOf="@+id/plankGoalText"
                    tools:layout_editor_absoluteX="34dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPlank"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:maxLength="26"
                    android:singleLine="true"
                    app:layout_constraintStart_toEndOf="@+id/pushupGoalText2"
                    tools:layout_editor_absoluteY="298dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>